prevent ugly wrap in header

--- a/app/components/UserStatus/index.module.css
+++ b/app/components/UserStatus/index.module.css
@@ -10,6 +10,7 @@
 
 .signIn {
   padding: 0.5rem;
+  text-wrap: nowrap;
 }
 .signedIn {
   display: flex;
